# algebraic-zk-experiments

./: Makefile  controlled-malleability-generic.sage  controlled-malleability.sage  cyclic8.ms  cyclic8.msolve.txt  cyclic9.ms  minimal_example.sage  msolve-clang.nix  msolve-cm-output.ms  post_submission-CM-experiments.ipynb  post_submission-Copy1.ipynb  post_submission.ipynb  singular-cm-output.sing  test.msolve.txt
zkbrownian-rs/: Cargo.toml  README.md  flake.nix  spec.md  spec.tex
zkbrownian-rs/benches/: forward_bench.rs
zkbrownian-rs/examples/: basic_forward.rs
zkbrownian-rs/src/: lib.rs  main.rs  types.rs
zkbrownian-rs/src/crypto/: curve_ops.rs  generators.rs  mod.rs  poseidon.rs  prf.rs
zkbrownian-rs/src/protocol/: bulletin_board.rs  forward.rs  mod.rs  routing.rs  spawn.rs  verify.rs
zkbrownian-rs/src/proving/: circuits.rs  constraints.rs  groth16.rs  mod.rs
zkbrownian-rs/src/proving/groth16/: constraints.rs  data_structures.rs  generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
