[package]
name = "zkbrownian"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic dependencies
ark-std = { version = "0.4", features = ["std"] }
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-crypto-primitives = "0.4"

# Utilities
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "forward_bench"
harness = false

[[example]]
name = "basic_forward"
